<resources>
    <string name="app_name">腾讯云助手</string>
    <string name="banner_ad_unit_id">ca-app-pub-6425922486772410/4669971281</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="header_des">本应用非腾讯官方应用</string>
    <string name="action_settings">设置</string>
    <string name="action_refresh">刷新</string>
    <string name="action_export_settings">导出APIKey</string>
    <string name="action_import_settings">导入APIKey</string>
    <string name="action_kanch">by Kanch - 支持开发者</string>
    <string name="drawer_index">欢迎页</string>
    <string name="drawer_about">关于本应用</string>
    <string name="drawer_horzontal_title">关于</string>
    <string name="drawer_cloudserver">云服务器管理</string>
    <string name="drawer_domain">域名管理</string>
    <string name="str_ma_title_cloudserver">云服务器管理</string>
    <string name="str_ma_title_domain">域名管理</string>
    <string name="str_ma_title_index">欢迎页</string>
    <string-array name="strarr_cm_spinner_location">
        <item>北京</item>
        <item>上海</item>
        <item>广州</item>
        <item>香港</item>
        <item>新加坡</item>
        <item>北美</item>
    </string-array>
    <string name="str_cm_refresh_button">刷新</string>
    <string name="str_cm_systemimage_button">镜像管理</string>
    <string name="str_cm_contextmenu_start">启动</string>
    <string name="str_cm_contextmenu_shutdown">关闭</string>
    <string name="str_cm_contextmenu_reboot">重启</string>
    <string name="str_cm_contextmenu_createimage">创建镜像</string>
    <string name="str_cm_contextmenu_reinstallos">重装系统</string>
    <string name="str_cm_contextmenu_resetpassword">重置密码</string>
    <string name="str_cm_contextmenu_returninstance">删除实例</string>
    <string name="str_cm_contentmenu_tips_rebooting">指令已发送！重启中...请稍候刷新。</string>
    <string name="str_cm_contentmenu_tips_booting">指令已发送！启动中...请稍候刷新。</string>
    <string name="str_cm_contentmenu_tips_shutdown">指令已发送！关机中...请稍候刷新。</string>
    <string name="str_cm_contentmenu_tips_return">指令已发送！退还中...请稍候刷新。</string>
    <string name="str_cm_statusdes_error">故障</string>
    <string name="str_cm_statusdes_running">运行中</string>
    <string name="str_cm_statusdes_creating">创建中...</string>
    <string name="str_cm_statusdes_shutdown">已关机</string>
    <string name="str_cm_statusdes_snapshooting">镜像制作中...</string>
    <string name="str_cm_statusdes_rebooting">重启中...</string>
    <string name="str_cm_statusdes_reinstall">重装系统中...</string>
    <string name="str_cm_statusdes_booting">开机中...</string>
    <string name="str_cm_statusdes_shutdowning">关机中...</string>
    <string name="str_cm_statusdes_formatting">格式化中...</string>
    <string name="str_cm_statusdes_others">其它状态</string>
    <string name="str_cm_paymode_latemonth">按月结算的后付费</string>
    <string name="str_cm_paymode_payfirst">包年包月 </string>
    <string name="str_cm_paymode_paybyuse">按量计费</string>
    <string name="str_cm_paymode_unknow">未知付费方式</string>
    <string name="str_cm_reinstall_title">重装系统</string>
    <string name="str_cm_reinstall_confirm">确认重装</string>
    <string name="str_cm_reinstall_os">操作系统：</string>
    <string name="str_cm_reinstall_password">设置密码：</string>
    <string name="str_cm_reinstall_needSecurityAgent">安装安全Agent</string>
    <string name="str_cm_reinstall_needMonitorAgent">安装监控Agent</string>
    <string name="str_cm_rename_title">修改实例名称</string>
    <string name="str_cm_rename_tips">实例名称：</string>
    <string name="str_cm_rename_imput_error">输入错误，情保证实例名称长度大于4小于60！</string>
    <string name="str_cm_rename_newnametips">实例名称不应超过60字符</string>
    <string name="str_cm_create_tips">创建实例（按量使用）</string>
    <string name="str_cm_create_confirm">确认创建</string>
    <string name="str_cm_create_cancel">取消</string>
    <string name="str_cm_create_disksystem">系统盘大小：</string>
    <string name="str_cm_create_diskdata">数据盘大小：</string>
    <string name="str_cm_create_network">带宽(Mbps)：</string>
    <string name="str_cm_create_password">设置密码：</string>
    <string name="str_cm_create_name">主机名：</string>
    <string name="str_cm_create_os">操作系统：</string>
    <string name="str_cm_create_servertype">服务器配置：</string>
    <string name="str_cm_create_zone">区域选择：</string>
    <string name="str_cm_create_tips_error_password">密码长度需要大于8且由字符和数字组成</string>
    <string name="str_cm_create_tips_error_name">请确保主机名长度大于4</string>
    <string name="str_cm_create_tips_support">当前仅支持创建按量使用且使用云端硬盘的云服务器！</string>
    <string-array name="strarr_cm_spinner_create_new">
        <item>北京一区@800001</item>
        <item>上海一区@200001</item>
        <item>广州二区@100002</item>
        <item>广州三区@100003</item>
        <item>香港一区(2核2G及以上)@300001</item>
        <item>北美一区@400001</item>
    </string-array>
    <string-array name="strarr_cs_spinner_serverresource_list">
        <item>1核1GB@1,1</item>
        <item>1核2GB@1,2</item>
        <item>1核4GB@1,4</item>
        <item>2核2GB@2,2</item>
        <item>2核4GB@2,4</item>
        <item>2核8GB@2,8</item>
        <item>4核4GB@4,4</item>
        <item>4核8GB@4,8</item>
        <item>4核12GB@4,12</item>
    </string-array>
    <string-array name="strarr_cs_spinner_os_list">
        <item>CentOS 5.8 32位@img-7br3ouzr</item>
        <item>CentOS 5.8 64位@img-4cq5l3u1</item>
        <item>CentOS 5.11 32位@img-ko6c8e6f</item>
        <item>CentOS 5.11 64位@img-ailu7ftt</item>
        <item>CentOS 6.2 64位@img-50mr2ow7</item>
        <item>CentOS 6.3 32位@img-1afi29f3</item>
        <item>CentOS 6.3 64位@img-4w43a15z</item>
        <item>CentOS 6.4 32位@img-k09t26i1</item>
        <item>CentOS 6.4 64位@img-jlo93805</item>
        <item>CentOS 6.5 32位@img-7uq6rrhr</item>
        <item>CentOS 6.5 64位@img-7fwdvfur</item>
        <item>CentOS 6.6 32位@img-5jbd8jxn</item>
        <item>CentOS 6.6 64位@img-h5le2uy5</item>
        <item>CentOS 6.7 32位@img-ljriodz5</item>
        <item>CentOS 6.7 64位@img-9iwld2rx</item>
        <item>CentOS 7.0 64位@img-b1ve77s9</item>
        <item>CentOS 7.1 64位@img-9q2lxkar</item>
        <item>CentOS 7.2 64位@img-31tjrtph</item>
        <item>Debian 7.4 64位@img-c1l6bgb1</item>
        <item>Debian 7.8 32位@img-2p1g2wjv</item>
        <item>Debian 7.8 64位@img-feqctcrx</item>
        <item>Debian 8.2 32位@img-ez7jwngr</item>
        <item>Debian 8.2 64位@img-hi93l4ht</item>
        <item>Ubuntu Server 12.04 LTS 64位 (Docker)@img-aa9z7opt</item>
        <item>Ubuntu Server 14.04.1 LTS 32位@img-qpxvpujt</item>
        <item>Ubuntu Server 14.04.1 LTS 64位@img-3wnd9xpl</item>
        <item>openSUSE 12.3 32位@img-8bf2kz5x</item>
        <item>openSUSE 12.3 64位@img-1p6m0vz5</item>
        <item>openSUSE 13.2 64位@img-pmhtrjdx</item>
        <item>SUSE Linux Enterprise Server 11 SP3 64位@img-mg89zx1h</item>
        <item>SUSE Linux Enterprise Server 12 64位@img-d5304izr</item>
        <item>FreeBSD 10.1 64位@img-871lthrb</item>
        <item>CoreOS 717.3.0 64位@img-6mre94jv</item>
    </string-array>
    <string name="str_cm_changepassword_title">修改密码</string>
    <string name="str_cm_changepassword_newpassword">新密码</string>
    <string name="str_cm_changepassword_comfirm">确认修改</string>
    <string name="str_cm_changepassword_tips">密码长度应该大于8位，由字符和数字组成</string>
    <string name="str_cm_changepassword_input_error">输入密码无效，请重新输入！</string>
    <string name="str_cm_changepassword_not_shutdown">只能在关机状态下修改密码！</string>
    <string name="str_dm_need_to_be_refreshed">无记录，请刷新。</string>
    <string name="str_dm_title">域名解析记录管理</string>
    <string name="str_dm_loading_records">加载解析记录...</string>
    <string name="str_dm_records_changresolve">修改解析记录</string>
    <string name="str_dm_records_comfirm">确认修改</string>
    <string name="str_dm_records_cancel">取消编辑</string>
    <string name="str_dm_records_delete">删除记录</string>
    <string name="str_dm_records_input_value">记录值：</string>
    <string name="str_dm_records_input_name">主机记录：</string>
    <string name="str_dm_records_input_type">记录类型：</string>
    <string-array name="strarr_dm_spinner_records_type">
        <item>A</item>
        <item>CNAME</item>
        <item>MX</item>
        <item>TXT</item>
        <item>NS</item>
        <item>AAAA</item>
        <item>SRV</item>
    </string-array>
    <string name="str_dm_add_records_tips">添加解析记录</string>
    <string name="str_dm_add_records_name">主机记录：</string>
    <string name="str_dm_add_records_type">记录类型</string>
    <string name="str_dm_add_records_value">记录值</string>
    <string name="str_dm_add_records_mxpriority">MX优先级</string>
    <string name="str_dm_add_records_confirm">确认添加</string>
    <string name="str_dm_add_records_cancel">取消</string>
    <string name="str_ip_notes">
        欢迎使用腾讯云助手\r\n
        <b>本应用与腾讯公司没有任何关系</b>\r\n
        在开始使用前，本应用需要获取您的云API密钥\r\n
    </string>
    <string name="str_ip_howtogetkey">
        不知道什么是云API密钥？点击这里查看如何获取\r\n
        请在下面的编辑框中分别输入您的密钥ID和密钥\r\n
        你也可以使用右上角菜单中的导入APIKey功能直接导入\r\n
    </string>
    <string name="str_ip_keyid">请输入您的SecretKeyID</string>
    <string name="str_ip_apikey">请输入您的SecretKey</string>
    <string name="str_ip_ok">确认</string>
    <string name="str_ip_change">修改</string>
    <string name="str_tips_invaild_api_key">无效API KEY！</string>
    <string name="str_tips_api_key_saved">API KEY已储存！</string>
    <string name="str_tips_api_key_found">存在可用API KEY</string>
    <string name="str_tips_api_key_needed">未找到API KEY，请添加有效API KEY</string>
    <string name="str_ip_open_url">打开API KEY获取页面...</string>
    <string name="str_sii_create">创建镜像</string>
    <string name="str_sii_tips_inputname">镜像名称：</string>
    <string name="str_sii_tips_inputdes">镜像描述：</string>
    <string name="str_sii_tips_ok">创建</string>
    <string name="str_sii_tips_cancel">取消</string>
    <string name="str_sii_title">私有镜像管理</string>
    <string name="str_sii_tips">正在获取私有镜像列表，请稍后！</string>
    <string name="str_sii_button">刷新</string>
    <string name="str_sii_tips_no_found">您的账户下还没有任何已知镜像列表！</string>
    <string name="str_sii_menue_createcvm">用该镜像创建实例</string>
    <string name="str_sii_menue_delete">删除该镜像</string>
    <string name="str_sii_input_tips_name">主机名长度应大于4</string>
    <string name="str_sii_input_tips_password">密码长度大于8且由字符和数字组成</string>
    <string name="str_sii_error_not_shutdown">只能在关机状态下创建镜像！</string>
    <string name="str_sii_create_tips_support">当前仅支持创建按量使用且地域与镜像地域相同的的云服务器！</string>
    <string name="str_about_thanks4your_support">感谢您的支持！</string>
    <string name="str_about_getsourcetips">欢迎发起Pull Request！</string>
    <string name="str_about_tips_requestnew">请在邮件正文写入您需要的新功能</string>
    <string name="str_about_tips_bugreport">请在邮件正文写上出错信息以及系统日志</string>
    <string name="str_about_button_requestnew">请求新功能</string>
    <string name="str_about_bugsubmit">提交bug</string>
    <string name="str_about_rating">去市场评分</string>
    <string name="str_about_getsourcecode">获取源代码</string>
    <string name="str_about_abouttext1">本应用可以帮助你便捷管理你的腾讯云资源。\r\n随着应用的更新，功能也会越来越多。</string>
    <string name="str_about_abouttext2">本应用非腾讯官方应用，与腾讯无任何关系。\r\n腾讯云及其logo均为腾讯公司所有。</string>
    <string name="str_about_abouttext3">*图标由pandecheng制作*</string>
    <string name="str_about_version">版本号： 2.1.1\r\nMade with ❤ by Kanch</string>
    <string name="str_support_header">支持开发者</string>
    <string name="str_support_saying">
        当前您可以通过以下方式支持：\r\n
        ***支付宝捐助\r\n
        **PayPal捐助\r\n
        *通过我的Airbnb邀请链接注册(跑题了)\r\n\r\n
        点击以下按钮直达\r\n
    </string>
    <string name="str_support_alipay">通过支付宝支持</string>
    <string name="str_support_paypal">通过PayPal支持</string>
    <string name="str_support_airbnb">通过Airbnb邀请链接支持</string>
    <string name="key_value_apikey">TENCENT_API_KEY</string>
</resources>