<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="128sp"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView199"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_about_version"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_light_default"
            android:textStyle="bold" />


        <TextView
            android:layout_marginTop="5sp"
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_about_abouttext1"
            android:textAlignment="center"
            android:textSize="16sp" />

        <TextView
            android:layout_marginTop="5sp"
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_about_abouttext2"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_submit_bug"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_about_bugsubmit" />

            <Button
                android:id="@+id/button_request_new_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_about_button_requestnew" />
        </LinearLayout>

        <Button
            android:id="@+id/button_rating_app_in_market"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_about_rating" />

    </LinearLayout>
</LinearLayout>