<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/drawer_domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:layout_marginBottom="5sp">

        <ProgressBar
            android:id="@+id/progressBar_domainfresh"
            style="?android:attr/progressBarStyle"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textView_domain_tips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/str_dm_need_to_be_refreshed" />

        <Button
            android:id="@+id/button_refresh_domain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/str_cm_refresh_button" />
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_domain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
    <ListView
        android:id="@+id/listView_domain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5sp"/>
</LinearLayout>