<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/str_cm_reinstall_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25sp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="0.7"
            android:text="@string/str_cm_reinstall_os"
            android:textAlignment="center" />

        <Spinner
            android:id="@+id/spinner_type_reinstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:entries="@array/strarr_cs_spinner_os_list"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="0.7"
            android:text="@string/str_cm_reinstall_password"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/editText_password_reinstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10sp"
            android:layout_weight="0.3"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="5sp"
        android:layout_marginTop="30sp">

        <Button
            android:id="@+id/button_cancel_reintall"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="25sp"
            android:layout_weight="0.5"
            android:text="@string/str_dm_add_records_cancel" />

        <Button
            android:id="@+id/button_confirm_reinstall"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_weight="0.5"
            android:text="@string/str_cm_reinstall_confirm" />
    </LinearLayout>

</LinearLayout>